@@ -1,3 +1,5 @@
+- Server.base_url: support for proxied https
+
 * Fri Nov 25 2016 - version 0.7.1
 - Require haveapi-client 0.7.0
 
